Now it is ready to navigate a person from one place to another

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAqi-g-R4ddWWnlRhHIxvP1_H4lrYSEhNo"/>
     </application>
 
 </manifest>
