--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAqi-g-R4ddWWnlRhHIxvP1_H4lrYSEhNo"/>
+            android:value="Write your own API Key"/>
     </application>
 
 </manifest>
